# travel-project

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml
api/management/commands/: populate_db.py
api/v1/: pagination.py  urls.py
api/v1/places/: serializers.py  urls.py  views.py
api/v1/projects/: serializers.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/django/: base.py  production.py
places/: admin.py  models.py
places/migrations/: 0001_initial.py  0002_place_external_id.py
places/services/: validators.py
projects/: admin.py  models.py
projects/migrations/: 0001_initial.py
